--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -5,16 +5,27 @@
   --red: #FF0000;
   --color-text: #f2f2f2;
 }
+
 html {
   font-size: 62.5%;
 }
+
 body {
   font: normal 1.6rem 'Montserrat', sans-serif;
   color: var(--color-text);
   background-color: #060606;
   padding: 0 5%;
 }
-a { text-decoration: none; }
+
+a {
+  color: var(--blue);
+  text-decoration: none;
+}
+
+li {
+  margin-left: 20px;
+  padding: 5px 0;
+}
 
 /* PATTERN */
 .circles-pattern {
