--- a/assets/styles/default.css
+++ b/assets/styles/default.css
@@ -53,18 +53,9 @@
     color: transparent;
     stroke-width: 4px;
 }
-.neon-title__text:nth-of-type(1) {
-    stroke: var(--yellow);
-    text-shadow: 0 0 20px var(--yellow), 0 0 30px var(--yellow);
-}
-.neon-title__text:nth-of-type(2) {
-    stroke: var(--red);
-    text-shadow: 0 0 20px var(--red), 0 0 30px var(--red);
-}
-.neon-title__text:nth-of-type(3) {
-    stroke: var(--blue);
-    text-shadow: 0 0 20px var(--blue), 0 0 30px var(--blue);
-}
+.neon-title__text:nth-of-type(1) { stroke: var(--yellow); }
+.neon-title__text:nth-of-type(2) { stroke: var(--red); }
+.neon-title__text:nth-of-type(3) { stroke: var(--blue); }
 .neon-title__pattern {
     height: 80px;
     margin-top: 8px;
