--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -1,4 +1,5 @@
 @import 'settings/index';
+@import 'globals/index';
 
 * {
   box-sizing: border-box !important;
@@ -6,9 +7,16 @@
   padding: 0;
 }
 
+html {
+	scroll-behavior: smooth;
+}
+
 body {
-	@apply bg-gray-100 text-gray-900 tracking-wide antialiased;
+	@apply bg-gray-100 text-gray-800 tracking-wide antialiased;
 	font-family: $font-stack;
+	@screen sm {
+		@apply p-0 pt-6 pr-6;
+	}
 }
 
 [v-cloak] {
@@ -28,4 +36,8 @@ a {
 
 ul {
 	list-style-type: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	@apply leading-none;
 }
